# vust

./: .gitignore  Cargo.toml  README.md  compile_shaders.bat
src/: buffer.rs  create_info.rs  descriptor.rs  internal_vust.rs  lib.rs  pipeline.rs  texture.rs  vust_command.rs  vust_sync.rs  write_descriptor_info.rs
tests/: model_rect.rs  model_rect_single_descriptor_update.rs  texture.rs  texture_and_triangle.rs  triangle.rs
tests/model_rect_shaders/: default.vert  default.vert.spv
tests/texture_shaders/: default.frag  default.frag.spv  default.vert  default.vert.spv
tests/triangle_shaders/: default.frag  default.frag.spv  default.vert  default.vert.spv
