[package]
name = "vust"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
gpu-allocator = "0.26.0"

[dev-dependencies]
winapi = "0.3.9"
glm = { version = "0.19.0", package = "nalgebra-glm" }
glfw = { version = "0.56.0", features = ["vulkan", "ash"] }
image = "0.25.2"
